added new programs and optimized the page

--- a/software.html
+++ b/software.html
@@ -313,7 +313,7 @@
             "",
 
 
-            "education kiit",
+            "education kiit cse",
             "KIIT CSE",
             "https://bibekchandsah.github.io/kiitcse",
             "https://bibekchandsah.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png",
