--- a/downloads.html
+++ b/downloads.html
@@ -16,10 +16,13 @@
     <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#2218a7">
     <!-- Provide a brief description of your page -->
-    <meta name="description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta name="search.description" content="bibekchandsah bcs bibekchandsah bibekchandsha web-development front-end development" />
+    <meta name="description"
+        content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
+    <meta name="search.description"
+        content="bibekchandsah bcs bibekchandsah bibekchandsha web-development front-end development" />
     <!-- Specify keywords related to your content -->
-    <meta name="keywords" content="bibek sha, bibekchandsah, bibekchandsah, web-development, resources, bibeksha10550 bibekchandsah">
+    <meta name="keywords"
+        content="bibek sha, bibekchandsah, bibekchandsah, web-development, resources, bibeksha10550 bibekchandsah">
     <!-- Define the author of the page -->
     <meta name="author" content="Bibek Chand Sha">
     <!-- Define the language of the content -->
@@ -28,7 +31,8 @@
     <link rel="canonical" href="https://bibekchandsah.github.io/bibekchandsah">
     <!-- Open Graph meta tags for social media sharing -->
     <meta property="og:title" content="BibekChandSah (BCS)">
-    <meta property="og:description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
+    <meta property="og:description"
+        content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
     <meta property="og:image" content="https://bibekchandsah.github.io/bibekchandsah/assets/images/BCS_Full_Share.png">
     <meta property="og:url" content="https://bibekchandsah.github.io/bibekchandsah">
     <meta property="og:type" content="website">
@@ -36,7 +40,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <!--     <meta name="twitter:site" content="@YourTwitterHandle"> Replace with your Twitter handle  -->
     <meta name="twitter:title" content="BibekChandSah (BCS)">
-    <meta name="twitter:description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
+    <meta name="twitter:description"
+        content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
     <meta name="twitter:image" content="https://bibekchandsah.github.io/bibekchandsah/assets/images/BCS_Full_Share.png">
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -53,6 +58,8 @@
     <!-- animate in scroll Jsr (https://michalsnik.github.io/aos) -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- animation on video -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -67,31 +74,20 @@
     </div>
     <!-- downloads -->
     <H3 class="border-bottom pt-lg-5 downloadHeading">Downloads</H3>
-    <div data-aos="fade-up" class="MostPopularContainer row row-cols-1 row-cols-md-auto g-4 mt-3">
-        <!-- items here 👇🏻 -->
-        <div data-aos="fade-up" class="col itemBox" style="z-index: 50;">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4 projectImage">
-                        <img src="https://bibekchandsah.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title fw-bold"><a href="https://bibekchandsah.github.io/kiitcse">KIIT CSE</a></h5>
-                            <p class="card-text">This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.</p>
-                        </div>
-                        <div class="btn-group float-end downloadButton" role="group">
-                            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"> Download </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="https://raw.githubusercontent.com/bibekchandsah/software/main/KIIT%20CSE.apk">Android</a></li>
-                                <li><a class="dropdown-item" href="https://raw.githubusercontent.com/bibekchandsah/software/main/KIIT%20CSE.exe">Window</a></li>
-                                <li><a class="dropdown-item" href="https://raw.githubusercontent.com/bibekchandsah/software/main/KIITCSE-linux-x64.zip">Linux</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <!-- <===== buttons =====> -->
+    <div class="d-flex gap-2 justify-content-center py-5 toolBadge mt-5 visually-hidden">
+        <button class="filter btn btn-primary rounded-pill active" data-filter="Reset" type="reset" value="Reset">Reset</button>
+        <button class="filter btn btn-primary rounded-pill" data-filter="HTML" type="button" title="HTML">HTML</button>
+    </div>
+    <!-- search section -->
+    <form class="row gy-2 gx-2 mt-2 align-items-center justify-content-center searchbox">
+        <div class="col-sm-3 input-group w-auto">
+            <span class="input-group-text" id="basic-addon1">Search</span>
+            <input type="text" autocomplete="off" class="form-control" aria-label="topic" aria-describedby="basic-addon1" id="noteTopicInput">
         </div>
+    </form>
+    <!-- download container -->
+    <div data-aos="fade-up" class="DownloadContainer MostPopularContainer row row-cols-1 row-cols-md-auto g-4 mt-3">
         <!-- <div data-aos="fade-up" class="col itemBox" style="z-index: 48;">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
@@ -115,6 +111,7 @@
                 </div>
             </div>
         </div> -->
+        <!-- dynamic items here 👇🏻 -->
     </div>
     <!-- online status toast -->
     <div class="onlineStatusToast">
@@ -129,10 +126,131 @@
         <!-- dynamic page visit counter 👇🏻-->
     </div>
     <!-- back to top -->
-    <a anim="ripple" href="#" class="scrollup show-scroll" id="scroll-up"><button type="button" class="btn btn-outline-primary"><i class="fa fa-arrow-up" aria-hidden="true"></i></button></a>
+    <a anim="ripple" href="#" class="scrollup show-scroll" id="scroll-up"><button type="button"
+            class="btn btn-outline-primary"><i class="fa fa-arrow-up" aria-hidden="true"></i></button></a>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/calendar.js"></script>
     <script>
+        // filter data of Download page 
+        $(document).ready(function () {
+            $('.filter').click(function () {
+                const value = $(this).attr('data-filter');
+                if (value == 'Reset') {
+                    $('.itemBox').show('1000');
+                }
+                else {
+                    $('.itemBox').not('.' + value).hide('1000');
+                    $('.itemBox').filter('.' + value).show('1000');
+                }
+            })
+            // add active class on selected item
+            $('.filter').click(function () {
+                $(this).addClass('active').siblings().removeClass('active');
+            })
+        })
+
+        // Call the function to update Software data
+        updateDownloadData(
+
+
+            // "filter",
+            // "name",
+            // "link",
+            // "img_link",
+            // "desc",
+            // "1stName",
+            // "1stLink",
+            // "",
+            // "",
+            // "",
+            // "",
+            // 
+
+            "Eye care Remainder",
+            "Eye Care",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/EyeCare.exe",
+            "https://cdn-icons-png.flaticon.com/512/3375/3375152.png",
+            "EyeCare Reminder is a user-friendly application designed to help you maintain healthy vision. By default, it sends a reminder every 20 minutes to look away from your screen and focus on a distant object, reducing eye strain. Users can customize the reminder interval and personalize the message to suit their preferences. Stay proactive about your eye health with EyeCare Reminder!",
+            "Window",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/EyeCare.exe",
+            "Telegram Link",
+            "https://t.me/bibekcs/212",
+            "",
+            "",
+
+            "Network Speed Monitor",
+            "Network Speed Monitor",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/speed-monitor.exe",
+            "https://cdn-icons-png.flaticon.com/512/15749/15749441.png",
+            "Network Speed Monitor is a comprehensive application designed to provide real-time insights into your network performance. This tool offers a suite of features to help you monitor, analyze, and optimize your internet connection.",
+            "Window",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/speed-monitor.exe",
+            "Telegram Link",
+            "https://t.me/bibekcs/213",
+            "",
+            "",
+
+
+            "Video Call Enhancer night call enhancer",
+            "Video Call Enhancer",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/Video%20call%20enhancer.exe",
+            "https://cdn-icons-png.flaticon.com/512/12560/12560388.png",
+            "When it’s dim or you’re on a night video call, it acts like a flash to brighten up your video.",
+            "Window",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/Video%20call%20enhancer.exe",
+            "Telegram Link",
+            "https://t.me/bibekcs/214",
+            "",
+            "",
+
+
+            "Circular menu minimize add new desktop hide windows lock screen",
+            "Circular Menu",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/Circular_Menu.zip",
+            "https://cdn-icons-png.flaticon.com/512/16787/16787237.png",
+            "It’s packed with shortcuts to keep anyone from snooping on what you’re up to",
+            "Window",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/Circular_Menu.zip",
+            "Telegram Link",
+            "https://t.me/bibekcs/215",
+            "",
+            "",
+
+
+            "material student record",
+            "Materials",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/Materials.apk",
+            "https://img.icons8.com/?size=256&id=JjXkZB4POgHN&format=png",
+            "It contains the materials regarding the KIIT University which contains the student detail of 2022 admitted batch and many more things.",
+            "Android",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/Materials.apk",
+            "",
+            "",
+            "",
+            "",
+
+
+            "education kiit cse",
+            "KIIT CSE",
+            "https://bibekchandsah.github.io/kiitcse",
+            "https://bibekchandsah.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png",
+            "This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.",
+            "Android",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/KIIT%20CSE.apk",
+            "Window",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/KIIT%20CSE.exe",
+            "Linux",
+            "https://raw.githubusercontent.com/bibekchandsah/software/main/KIITCSE-linux-x64.zip",
+
+            // "filter", "name", "link", "imgLink", "desc", "1stName", "1stLink", "2ndName", "2ndLink", "3rdName", "3rdLink",
+
+
+            // Add more Software data here
+
+        );
+
+        // Generate Download elements
+        generateDownloadElements();
     </script>
 </body>
 
